--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "giftests",
   "version": "0.0.1",
   "description": "Image morphing application for fun",
-  "main": "index.js",
+  "engines": {
+    "node": ">=7"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,10 +19,51 @@
     "facebook",
     "social"
   ],
-  "author": "Joao Silva",
+  "author": "Joao Silva <joao.silva@toptal.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/socialsweetheartsgmbh/giftests/issues"
   },
-  "homepage": "https://github.com/socialsweetheartsgmbh/giftests#readme"
+  "homepage": "https://github.com/socialsweetheartsgmbh/giftests#readme",
+  "dependencies": {
+    "babel-core": "^6.25.0",
+    "body-parser": "^1.17.2",
+    "express": "^4.15.3",
+    "isomorphic-fetch": "^2.2.1",
+    "mongoose": "^4.10.6",
+    "react": "^15.6.0",
+    "react-dom": "^15.6.0",
+    "react-helmet": "^5.1.3",
+    "react-intl": "^2.3.0",
+    "react-redux": "^5.0.5",
+    "react-router": "^4.1.1",
+    "redux": "^3.6.0",
+    "sanitize-html": "^1.14.1"
+  },
+  "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.1.0",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "file-loader": "^0.11.2",
+    "json-loader": "^0.5.4",
+    "nodemon": "^1.11.0",
+    "react-hot-loader": "^1.3.1",
+    "redux-devtools": "^3.4.0",
+    "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
+    "webpack": "^2.6.1",
+    "webpack-dev-middleware": "^1.10.2",
+    "webpack-dev-server": "^2.4.5",
+    "webpack-externals-plugin": "^1.0.0",
+    "webpack-hot-middleware": "^2.18.0"
+  }
 }
