--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "babel-core": "^6.25.0",
     "body-parser": "^1.17.2",
+    "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "isomorphic-fetch": "^2.2.1",
     "mongoose": "^4.10.6",
@@ -47,6 +48,8 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "chunk-manifest-webpack-plugin": "^1.1.0",
+    "cssnano": "^3.10.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-plugin-import": "^2.3.0",
@@ -56,6 +59,11 @@
     "file-loader": "^0.11.2",
     "json-loader": "^0.5.4",
     "nodemon": "^1.11.0",
+    "postcss": "^6.0.2",
+    "postcss-cssnext": "^2.11.0",
+    "postcss-focus": "^2.0.0",
+    "postcss-loader": "^2.0.5",
+    "postcss-reporter": "^4.0.0",
     "react-hot-loader": "^1.3.1",
     "redux-devtools": "^3.4.0",
     "style-loader": "^0.18.2",
@@ -64,6 +72,7 @@
     "webpack-dev-middleware": "^1.10.2",
     "webpack-dev-server": "^2.4.5",
     "webpack-externals-plugin": "^1.0.0",
-    "webpack-hot-middleware": "^2.18.0"
+    "webpack-hot-middleware": "^2.18.0",
+    "webpack-manifest-plugin": "^1.1.0"
   }
 }
