--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "node": ">=7"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "cross-env BABEL_DISABLE_CACHE=1 NODE_ENV=development nodemon index.js",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
+    "build:server": "cross-env NODE_ENV=production webpack --config webpack.config.server.js"
   },
   "repository": {
     "type": "git",
@@ -28,6 +31,8 @@
   "dependencies": {
     "babel-core": "^6.25.0",
     "body-parser": "^1.17.2",
+    "compression": "^1.6.2",
+    "cross-env": "^5.0.1",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "isomorphic-fetch": "^2.2.1",
@@ -37,24 +42,32 @@
     "react-helmet": "^5.1.3",
     "react-intl": "^2.3.0",
     "react-redux": "^5.0.5",
-    "react-router": "^4.1.1",
+    "react-router": "^2.4.1",
     "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "sanitize-html": "^1.14.1"
   },
   "devDependencies": {
+    "autoprefixer": "^7.1.1",
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
+    "babel-plugin-webpack-loaders": "^0.9.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-react-optimize": "^1.0.1",
     "babel-preset-stage-0": "^6.24.1",
     "chunk-manifest-webpack-plugin": "^1.1.0",
+    "css-loader": "^0.28.4",
+    "css-modules-require-hook": "^4.0.6",
     "cssnano": "^3.10.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.1.0",
+    "eventsource-polyfill": "^0.9.6",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
     "json-loader": "^0.5.4",
@@ -64,8 +77,10 @@
     "postcss-focus": "^2.0.0",
     "postcss-loader": "^2.0.5",
     "postcss-reporter": "^4.0.0",
-    "react-hot-loader": "^1.3.1",
+    "react-hot-loader": "^3.0.0-beta.7",
     "redux-devtools": "^3.4.0",
+    "redux-devtools-dock-monitor": "^1.1.2",
+    "redux-devtools-log-monitor": "^1.3.0",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "webpack": "^2.6.1",
