--- a/package.json
+++ b/package.json
@@ -36,13 +36,15 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "isomorphic-fetch": "^2.2.1",
+    "jquery": "^3.2.1",
     "mongoose": "^4.10.6",
     "react": "^15.6.0",
+    "react-bootstrap": "^0.31.0",
     "react-dom": "^15.6.0",
     "react-helmet": "^5.1.3",
     "react-intl": "^2.3.0",
     "react-redux": "^5.0.5",
-    "react-router": "^2.4.1",
+    "react-router": "^2.5.2",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "sanitize-html": "^1.14.1"
@@ -58,6 +60,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-optimize": "^1.0.1",
     "babel-preset-stage-0": "^6.24.1",
+    "bootstrap-sass": "^3.3.7",
     "chunk-manifest-webpack-plugin": "^1.1.0",
     "css-loader": "^0.28.4",
     "css-modules-require-hook": "^4.0.6",
@@ -71,6 +74,7 @@
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
     "json-loader": "^0.5.4",
+    "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
     "postcss": "^6.0.2",
     "postcss-cssnext": "^2.11.0",
@@ -81,6 +85,8 @@
     "redux-devtools": "^3.4.0",
     "redux-devtools-dock-monitor": "^1.1.2",
     "redux-devtools-log-monitor": "^1.3.0",
+    "resolve-url-loader": "^2.0.2",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "webpack": "^2.6.1",
