--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cross-env": "^5.0.1",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
+    "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.2.1",
     "mongoose": "^4.10.6",
@@ -45,9 +46,13 @@
     "react-intl": "^2.3.0",
     "react-redux": "^5.0.5",
     "react-router": "^2.5.2",
+    "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
+    "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.2.0",
-    "sanitize-html": "^1.14.1"
+    "reselect": "^3.0.1",
+    "sanitize-html": "^1.14.1",
+    "scroll-behavior": "^0.9.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.1",
