--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "babel-core": "^6.25.0",
     "body-parser": "^1.17.2",
+    "bootstrap-loader": "^2.0.1",
     "compression": "^1.6.2",
     "cross-env": "^5.0.1",
     "dotenv": "^4.0.0",
@@ -52,7 +53,7 @@
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
     "sanitize-html": "^1.14.1",
-    "scroll-behavior": "^0.9.3"
+    "scroll-behavior": "^0.8.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.1",
