feat(quizlist): quizlist item, quizlist components

--- a/.eslintrc
+++ b/.eslintrc
@@ -22,8 +22,11 @@
      "react/jsx-no-bind": [0],
      "react/jsx-filename-extension": [0],
      "react/forbid-prop-types": [0],
+     "react/prefer-stateless-function": 0,
+     "import/prefer-default-export": 0,
      "import/no-extraneous-dependencies": 0,
      "import/first": 0,
+     "import/extensions": ["off", "never"],
      "arrow-parens": 0,
      "global-require": 0,
      "import/no-unresolved": [0] // Until import plugin supports webpack 2 resolveModules
