--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,7 @@
   "presets": ["react", "es2015", "stage-0"],
   "env": {
     "production": {
-      "presets": ["es2015", "react", "react-optimize", "es2015-native-modules", "stage-0"]
+      "presets": [["es2015", { "modules" : false }], "react", "react-optimize", "stage-0"]
     }
   }
 }
