--- a/ecosystem.json5
+++ b/ecosystem.json5
@@ -3,7 +3,7 @@
     name: 'Giftests Development',
     script: 'npm start',
     env_development: {
-      NODE_ENV: 'development'
+      NODE_ENV: 'production'
     }
   }],
   deploy: {
@@ -15,7 +15,7 @@
       repo: 'git@github.com:socialsweetheartsgmbh/giftests.git',
       path: '/srv/giftests',
       'pre-deploy': '',
-      'post-deploy': 'npm install && pm2 startOrRestart ecosystem.json5 --env development'
+      'post-deploy': 'npm install && npm run build && npm run build:server pm2 startOrRestart ecosystem.json5 --env development'
     }
   }
 }
