--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.2.1",
     "mongoose": "^4.10.6",
+    "node-sass": "^4.5.3",
     "react": "^15.6.0",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.6.0",
