refactor(pm2): rename pm2 instance name

--- a/ecosystem.json5
+++ b/ecosystem.json5
@@ -1,6 +1,6 @@
 {
   apps: [{
-    name: 'Giftests Development',
+    name: 'giftests-dev',
     script: 'npm',
     args: 'start',
     env_development: {
