fix(pm2): change pem file location

--- a/ecosystem.json5
+++ b/ecosystem.json5
@@ -9,7 +9,7 @@
   }],
   deploy: {
     development: {
-      key: '.travis/deploy_key.pem',
+      key: '.pem/deploy_key.pem',
       user: 'ubuntu',
       host: '13.58.235.179',
       ref: 'origin/master',
