--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "immutable": "^3.8.1",
+    "intl": "^1.2.5",
+    "intl-locales-supported": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.2.1",
     "mongoose": "^4.10.6",
