--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "intl-locales-supported": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.2.1",
+    "limax": "^1.5.0",
+    "lodash": "^4.17.4",
     "mongoose": "^4.10.6",
     "node-sass": "^4.5.3",
     "react": "^15.6.0",
