--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,6 @@
 {
   "presets": ["react", "es2015", "stage-0"],
+  "plugins": ["transform-runtime"],
   "env": {
     "production": {
       "presets": [["es2015", { "modules" : false }], "react", "react-optimize", "stage-0"]
