--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
     "redux-immutable": "^4.0.0",
-    "redux-thunk": "^2.2.0",
+    "redux-saga": "^0.15.4",
     "reselect": "^3.0.1",
     "sanitize-html": "^1.14.1",
     "scroll-behavior": "^0.8.2"
@@ -66,6 +66,7 @@
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-webpack-loaders": "^0.9.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
@@ -90,8 +91,10 @@
     "nodemon": "^1.11.0",
     "postcss": "^6.0.2",
     "postcss-cssnext": "^2.11.0",
+    "postcss-custom-media": "^6.0.0",
     "postcss-focus": "^2.0.0",
     "postcss-loader": "^2.0.5",
+    "postcss-nesting": "^4.0.1",
     "postcss-reporter": "^4.0.0",
     "react-hot-loader": "^3.0.0-beta.7",
     "redux-devtools": "^3.4.0",
