--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "react-intl": "^2.3.0",
     "react-redux": "^5.0.5",
     "react-router": "^2.5.2",
+    "react-router-bootstrap": "^0.23.3",
+    "react-router-dom": "^4.1.1",
     "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
     "redux-immutable": "^4.0.0",
