--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "cross-env": "^5.0.1",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
+    "express-session": "^1.15.3",
     "immutable": "^3.8.1",
     "intl": "^1.2.5",
     "intl-locales-supported": "^1.0.0",
@@ -46,6 +47,8 @@
     "lodash": "^4.17.4",
     "mongoose": "^4.10.6",
     "node-sass": "^4.5.3",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
     "react": "^15.6.0",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.6.0",
