feat(quiz-result): added quiz result page

--- a/.env-example
+++ b/.env-example
@@ -2,3 +2,8 @@ SITE_URL="http://localhost:3000"
 MONGO_URL="mongodb://localhost:27017/giftests"
 PORT=3000
 MORPH_API_URL="http://dev01.dev103.social-net.me:8081/imagecreator/dynImageAPI.php"
+MORPH_API_KEY=""
+FB_CLIENT_ID=""
+FB_CLIENT_SECRET=""
+FB_CALLBACK_URL="http://localhost:3000/auth/facebook/callback"
+SESSION_SECRET=animatedtestSESSION
