feat(result): upload to s3, sharing on facebook

--- a/.env-example
+++ b/.env-example
@@ -7,3 +7,9 @@ FB_CLIENT_ID=""
 FB_CLIENT_SECRET=""
 FB_CALLBACK_URL="http://localhost:3000/auth/facebook/callback"
 SESSION_SECRET=animatedtestSESSION
+AWS_ACCESS_KEY_ID=""
+AWS_SECRET_ACCESS_KEY=""
+AWS_S3_BUCKET="static.animatedtest.com"
+AWS_S3_FOLDER="dev"
+AWS_REGION="us-east-2"
+AWS_S3_URL="http://static.animatedtest.com"
