--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,7 @@
      "react/jsx-filename-extension": [0],
      "react/forbid-prop-types": [0],
      "react/prefer-stateless-function": 0,
+     "jsx-a11y/no-static-element-interactions": 0,
      "import/prefer-default-export": 0,
      "import/no-extraneous-dependencies": 0,
      "import/first": 0,
@@ -30,5 +31,8 @@
      "arrow-parens": 0,
      "global-require": 0,
      "import/no-unresolved": [0] // Until import plugin supports webpack 2 resolveModules
+  },
+  "globals": {
+    "FB": true
   }
 }
