--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/socialsweetheartsgmbh/giftests#readme",
   "dependencies": {
+    "aws-sdk": "^2.80.0",
     "babel-core": "^6.25.0",
     "body-parser": "^1.17.2",
     "bootstrap-loader": "^2.0.1",
@@ -38,6 +39,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
+    "guid": "0.0.12",
     "immutable": "^3.8.1",
     "intl": "^1.2.5",
     "intl-locales-supported": "^1.0.0",
@@ -62,6 +64,7 @@
     "redux": "^3.6.0",
     "redux-immutable": "^4.0.0",
     "redux-saga": "^0.15.4",
+    "request": "^2.81.0",
     "reselect": "^3.0.1",
     "sanitize-html": "^1.14.1",
     "scroll-behavior": "^0.8.2"
