--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "redux-immutable": "^4.0.0",
     "redux-saga": "^0.15.4",
     "request": "^2.81.0",
+    "request-promise": "^4.2.1",
     "reselect": "^3.0.1",
     "sanitize-html": "^1.14.1",
     "scroll-behavior": "^0.8.2"
