feat(quiz): type & algorithm params and generate background image

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "express": "^4.15.3",
     "express-session": "^1.15.3",
     "fb": "^2.0.0",
+    "guid": "0.0.12",
     "immutable": "^3.8.1",
     "intl": "^1.2.5",
     "intl-locales-supported": "^1.0.0",
